// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`computeConsumptionData characterization > digest is stable for a month of hourly data 1`] = `
{
  "keys": [
    "battery_to_grid",
    "grid_to_battery",
    "solar_to_battery",
    "solar_to_grid",
    "total",
    "used_battery",
    "used_grid",
    "used_solar",
    "used_total",
  ],
  "numberCount": 5960,
  "numberSum": "5919.28800000",
  "type": "object",
}
`;

exports[`computeConsumptionData characterization > matches snapshot for a full battery + solar setup 1`] = `
{
  "compareConsumption": undefined,
  "consumption": {
    "battery_to_grid": {
      "1704067200000": 0.048000000000000265,
      "1704070800000": 0.394,
      "1704074400000": 0.261,
      "1704078000000": 1.3609999999999998,
      "1704081600000": 1.64,
      "1704085200000": 1.185,
      "1704088800000": 0.311,
      "1704092400000": 0,
      "1704096000000": 0.808,
      "1704099600000": 0.7069999999999996,
      "1704103200000": 0,
      "1704106800000": 0.774,
      "1704110400000": 0,
      "1704114000000": 1.014,
      "1704117600000": 0.013,
      "1704121200000": 0.117,
      "1704124800000": 0.181,
      "1704128400000": 0,
      "1704132000000": 0.188,
      "1704135600000": 0.069,
      "1704139200000": 0.218,
      "1704142800000": 0.84,
      "1704146400000": 0.809,
      "1704150000000": 0,
    },
    "grid_to_battery": {
      "1704067200000": 0,
      "1704070800000": 0.17,
      "1704074400000": 0.255,
      "1704078000000": 0,
      "1704081600000": 0,
      "1704085200000": 0,
      "1704088800000": 0,
      "1704092400000": 0,
      "1704096000000": 0.576,
      "1704099600000": 0.3620000000000003,
      "1704103200000": 0,
      "1704106800000": 0.417,
      "1704110400000": 0,
      "1704114000000": 0.873,
      "1704117600000": 0.162,
      "1704121200000": 0.634,
      "1704124800000": 0.7390000000000001,
      "1704128400000": 0,
      "1704132000000": 0.062000000000000055,
      "1704135600000": 0.671,
      "1704139200000": 0.6089999999999998,
      "1704142800000": 0.279,
      "1704146400000": 0.845,
      "1704150000000": 0,
    },
    "solar_to_battery": {
      "1704067200000": 0.914,
      "1704070800000": 1.293,
      "1704074400000": 0,
      "1704078000000": 1.539,
      "1704081600000": 0.577,
      "1704085200000": 0.351,
      "1704088800000": 0.758,
      "1704092400000": 0.226,
      "1704096000000": 0.377,
      "1704099600000": 0.2629999999999997,
      "1704103200000": 0,
      "1704106800000": 0.054,
      "1704110400000": 0.129,
      "1704114000000": 0,
      "1704117600000": 0.6519999999999999,
      "1704121200000": 0.22399999999999998,
      "1704124800000": 0.635,
      "1704128400000": 0.09,
      "1704132000000": 1.923,
      "1704135600000": 0,
      "1704139200000": 0.13300000000000023,
      "1704142800000": 0,
      "1704146400000": 0.006,
      "1704150000000": 0.203,
    },
    "solar_to_grid": {
      "1704067200000": 1.0459999999999998,
      "1704070800000": 0,
      "1704074400000": 0.153,
      "1704078000000": 0.4540000000000002,
      "1704081600000": 0.03400000000000003,
      "1704085200000": 0.6699999999999999,
      "1704088800000": 0.562,
      "1704092400000": 0.45,
      "1704096000000": 0,
      "1704099600000": 0.5660000000000003,
      "1704103200000": 0.466,
      "1704106800000": 0,
      "1704110400000": 0.65,
      "1704114000000": 0,
      "1704117600000": 1.038,
      "1704121200000": 1.163,
      "1704124800000": 0,
      "1704128400000": 0.99,
      "1704132000000": 0,
      "1704135600000": 1.127,
      "1704139200000": 0.14999999999999974,
      "1704142800000": 0,
      "1704146400000": 0,
      "1704150000000": 1.367,
    },
    "total": {
      "battery_to_grid": 10.937999999999999,
      "grid_to_battery": 6.654000000000001,
      "solar_to_battery": 10.347000000000001,
      "solar_to_grid": 10.886000000000003,
      "used_battery": 11.219000000000001,
      "used_grid": 16.903999999999996,
      "used_solar": 4.292,
      "used_total": 27.756999999999998,
    },
    "used_battery": {
      "1704067200000": 1.8679999999999997,
      "1704070800000": 0,
      "1704074400000": 0,
      "1704078000000": 0.4910000000000003,
      "1704081600000": 0.0990000000000002,
      "1704085200000": 0.6439999999999999,
      "1704088800000": 0,
      "1704092400000": 0.674,
      "1704096000000": 0.18999999999999972,
      "1704099600000": 3.3306690738754696e-16,
      "1704103200000": 1.893,
      "1704106800000": 0,
      "1704110400000": 1.449,
      "1704114000000": 0.123,
      "1704117600000": 0,
      "1704121200000": 0,
      "1704124800000": 1.3539999999999999,
      "1704128400000": 0.367,
      "1704132000000": 0.319,
      "1704135600000": 0,
      "1704139200000": 0,
      "1704142800000": 0,
      "1704146400000": 0.8469999999999999,
      "1704150000000": 0.901,
    },
    "used_grid": {
      "1704067200000": 0.4399999999999997,
      "1704070800000": 0,
      "1704074400000": 1.1020000000000003,
      "1704078000000": 1.811,
      "1704081600000": 1.56,
      "1704085200000": 1.3209999999999995,
      "1704088800000": 0,
      "1704092400000": 0.6009999999999996,
      "1704096000000": 0,
      "1704099600000": 1.0849999999999995,
      "1704103200000": 0.03799999999999981,
      "1704106800000": 0,
      "1704110400000": 0.247,
      "1704114000000": 1.1099999999999999,
      "1704117600000": 0,
      "1704121200000": 0,
      "1704124800000": 1.232,
      "1704128400000": 0.7719999999999998,
      "1704132000000": 1.676,
      "1704135600000": 1.0399999999999996,
      "1704139200000": 1.0010000000000003,
      "1704142800000": 0,
      "1704146400000": 0.31000000000000005,
      "1704150000000": 1.5579999999999996,
    },
    "used_solar": {
      "1704067200000": 0,
      "1704070800000": 0,
      "1704074400000": 0,
      "1704078000000": 0,
      "1704081600000": 0,
      "1704085200000": 0,
      "1704088800000": 0,
      "1704092400000": 1.308,
      "1704096000000": 0,
      "1704099600000": 0,
      "1704103200000": 1.478,
      "1704106800000": 0,
      "1704110400000": 1.093,
      "1704114000000": 0,
      "1704117600000": 0,
      "1704121200000": 0,
      "1704124800000": 0,
      "1704128400000": 0.129,
      "1704132000000": 0,
      "1704135600000": 0,
      "1704139200000": 0,
      "1704142800000": 0,
      "1704146400000": 0,
      "1704150000000": 0.28400000000000003,
    },
    "used_total": {
      "1704067200000": 2.3079999999999994,
      "1704070800000": -1.5040000000000002,
      "1704074400000": 1.1020000000000003,
      "1704078000000": 2.3020000000000005,
      "1704081600000": 1.6590000000000003,
      "1704085200000": 1.9649999999999994,
      "1704088800000": -1.014,
      "1704092400000": 2.5829999999999997,
      "1704096000000": 0.18999999999999972,
      "1704099600000": 1.0849999999999997,
      "1704103200000": 3.409,
      "1704106800000": -0.6259999999999999,
      "1704110400000": 2.7890000000000006,
      "1704114000000": 1.2329999999999999,
      "1704117600000": -0.9170000000000001,
      "1704121200000": -0.1150000000000001,
      "1704124800000": 2.586,
      "1704128400000": 1.2679999999999998,
      "1704132000000": 1.9949999999999999,
      "1704135600000": 1.0399999999999996,
      "1704139200000": 1.0010000000000003,
      "1704142800000": -0.482,
      "1704146400000": 1.157,
      "1704150000000": 2.743,
    },
  },
}
`;

exports[`computeConsumptionData characterization > matches snapshot with compare data 1`] = `
{
  "compareConsumption": {
    "battery_to_grid": {
      "1703980800000": 0,
      "1703984400000": 0.61,
      "1703988000000": 0.5959999999999999,
      "1703991600000": 0.724,
      "1703995200000": 0.159,
      "1703998800000": 0.953,
      "1704002400000": 0.244,
      "1704006000000": 0,
      "1704009600000": 0.569,
      "1704013200000": 0.017,
      "1704016800000": 0,
      "1704020400000": 0.349,
      "1704024000000": 1.355,
      "1704027600000": 0.082,
      "1704031200000": 0,
      "1704034800000": 0.7119999999999999,
      "1704038400000": 0.27,
      "1704042000000": 0.30900000000000005,
      "1704045600000": 0,
      "1704049200000": 1.579,
      "1704052800000": 0.218,
      "1704056400000": 0.40400000000000014,
      "1704060000000": 0.596,
      "1704063600000": 0,
    },
    "grid_to_battery": {
      "1703980800000": 0,
      "1703984400000": 0.347,
      "1703988000000": 0,
      "1703991600000": 0.056,
      "1703995200000": 0.43699999999999983,
      "1703998800000": 1.396,
      "1704002400000": 0.687,
      "1704006000000": 0,
      "1704009600000": 0,
      "1704013200000": 1.105,
      "1704016800000": 0,
      "1704020400000": 0.694,
      "1704024000000": 1.148,
      "1704027600000": 0.418,
      "1704031200000": 0,
      "1704034800000": 0,
      "1704038400000": 0.21099999999999985,
      "1704042000000": 0,
      "1704045600000": 0,
      "1704049200000": 0.099,
      "1704052800000": 0.8139999999999998,
      "1704056400000": 0,
      "1704060000000": 0.091,
      "1704063600000": 0,
    },
    "solar_to_battery": {
      "1703980800000": 0.614,
      "1703984400000": 0.972,
      "1703988000000": 0.537,
      "1703991600000": 1.119,
      "1703995200000": 1.191,
      "1703998800000": 0.5570000000000002,
      "1704002400000": 0,
      "1704006000000": 0.094,
      "1704009600000": 0.962,
      "1704013200000": 0.476,
      "1704016800000": 0.654,
      "1704020400000": 0.2340000000000001,
      "1704024000000": 0.5390000000000001,
      "1704027600000": 0.095,
      "1704031200000": 1.322,
      "1704034800000": 0.527,
      "1704038400000": 1.546,
      "1704042000000": 0.789,
      "1704045600000": 0.612,
      "1704049200000": 0.008,
      "1704052800000": 0.8540000000000001,
      "1704056400000": 0,
      "1704060000000": 0.537,
      "1704063600000": 0.044,
    },
    "solar_to_grid": {
      "1703980800000": 0.13,
      "1703984400000": 0,
      "1703988000000": 1.0630000000000002,
      "1703991600000": 0.738,
      "1703995200000": 0,
      "1703998800000": 0.1409999999999998,
      "1704002400000": 0,
      "1704006000000": 1.23,
      "1704009600000": 0.8360000000000001,
      "1704013200000": 0,
      "1704016800000": 0.815,
      "1704020400000": 1.004,
      "1704024000000": 0.44199999999999984,
      "1704027600000": 0,
      "1704031200000": 0.209,
      "1704034800000": 0.5670000000000001,
      "1704038400000": 0,
      "1704042000000": 0.2839999999999999,
      "1704045600000": 0.125,
      "1704049200000": 0,
      "1704052800000": 1.0679999999999998,
      "1704056400000": 1.293,
      "1704060000000": 0,
      "1704063600000": 0,
    },
    "total": {
      "battery_to_grid": 9.745999999999999,
      "grid_to_battery": 7.503000000000001,
      "solar_to_battery": 14.283,
      "solar_to_grid": 9.944999999999999,
      "used_battery": 13.568000000000001,
      "used_grid": 17.843,
      "used_solar": 1.869,
      "used_total": 30.432999999999996,
    },
    "used_battery": {
      "1703980800000": 0.148,
      "1703984400000": 0.7799999999999999,
      "1703988000000": 1.0180000000000002,
      "1703991600000": 0,
      "1703995200000": 0.701,
      "1703998800000": 0,
      "1704002400000": 0,
      "1704006000000": 0.987,
      "1704009600000": 0.7610000000000001,
      "1704013200000": 1.492,
      "1704016800000": 0.132,
      "1704020400000": 0,
      "1704024000000": 0,
      "1704027600000": 1.9000000000000001,
      "1704031200000": 0,
      "1704034800000": 0.4960000000000001,
      "1704038400000": 0.8779999999999999,
      "1704042000000": 0.3999999999999999,
      "1704045600000": 1.713,
      "1704049200000": 0,
      "1704052800000": 0,
      "1704056400000": 1.1249999999999998,
      "1704060000000": 0.5429999999999999,
      "1704063600000": 0.494,
    },
    "used_grid": {
      "1703980800000": 1.996,
      "1703984400000": 1.28,
      "1703988000000": 0.859,
      "1703991600000": 0,
      "1703995200000": 0.6420000000000001,
      "1703998800000": 0,
      "1704002400000": 0,
      "1704006000000": 1.456,
      "1704009600000": 1.358,
      "1704013200000": 0.45500000000000007,
      "1704016800000": 1.0149999999999997,
      "1704020400000": 0,
      "1704024000000": 0.05600000000000005,
      "1704027600000": 0,
      "1704031200000": 1.449,
      "1704034800000": 0.951,
      "1704038400000": 1.2689999999999995,
      "1704042000000": 1.7959999999999998,
      "1704045600000": 0.593,
      "1704049200000": 0,
      "1704052800000": 0.2270000000000001,
      "1704056400000": 0.45099999999999985,
      "1704060000000": 0,
      "1704063600000": 1.9899999999999995,
    },
    "used_solar": {
      "1703980800000": 0.16900000000000004,
      "1703984400000": 0,
      "1703988000000": 0,
      "1703991600000": 0,
      "1703995200000": 0,
      "1703998800000": 0,
      "1704002400000": 0,
      "1704006000000": 0.508,
      "1704009600000": 0,
      "1704013200000": 0,
      "1704016800000": 0.1190000000000001,
      "1704020400000": 0,
      "1704024000000": 0,
      "1704027600000": 0,
      "1704031200000": 0.388,
      "1704034800000": 0,
      "1704038400000": 0,
      "1704042000000": 0,
      "1704045600000": 0.344,
      "1704049200000": 0,
      "1704052800000": 0,
      "1704056400000": 0,
      "1704060000000": 0,
      "1704063600000": 0.341,
    },
    "used_total": {
      "1703980800000": 2.313,
      "1703984400000": 2.06,
      "1703988000000": 1.8770000000000007,
      "1703991600000": -0.23199999999999998,
      "1703995200000": 1.3430000000000002,
      "1703998800000": -0.39400000000000035,
      "1704002400000": -0.8979999999999999,
      "1704006000000": 2.9510000000000005,
      "1704009600000": 2.1190000000000007,
      "1704013200000": 1.947,
      "1704016800000": 1.266,
      "1704020400000": -0.36400000000000043,
      "1704024000000": 0.05600000000000005,
      "1704027600000": 1.9000000000000001,
      "1704031200000": 1.8370000000000002,
      "1704034800000": 1.447,
      "1704038400000": 2.1469999999999994,
      "1704042000000": 2.1959999999999997,
      "1704045600000": 2.65,
      "1704049200000": -0.959,
      "1704052800000": 0.2270000000000001,
      "1704056400000": 1.5759999999999996,
      "1704060000000": 0.5429999999999999,
      "1704063600000": 2.8249999999999997,
    },
  },
  "consumption": {
    "battery_to_grid": {
      "1704067200000": 0.763,
      "1704070800000": 1.647,
      "1704074400000": 0,
      "1704078000000": 0.19300000000000006,
      "1704081600000": 0.5009999999999999,
      "1704085200000": 0.229,
      "1704088800000": 1.306,
      "1704092400000": 0,
      "1704096000000": 0,
      "1704099600000": 0.027000000000000135,
      "1704103200000": 0.9389999999999998,
      "1704106800000": 0.339,
      "1704110400000": 0.024,
      "1704114000000": 1.84,
      "1704117600000": 0.122,
      "1704121200000": 0.6149999999999995,
      "1704124800000": 0.9529999999999998,
      "1704128400000": 0.293,
      "1704132000000": 0.3599999999999999,
      "1704135600000": 1.062,
      "1704139200000": 0.712,
      "1704142800000": 0.8019999999999998,
      "1704146400000": 0.10300000000000015,
      "1704150000000": 0,
    },
    "grid_to_battery": {
      "1704067200000": 0,
      "1704070800000": 0.13799999999999957,
      "1704074400000": 0,
      "1704078000000": 0,
      "1704081600000": 0,
      "1704085200000": 0.9149999999999999,
      "1704088800000": 0.045,
      "1704092400000": 0,
      "1704096000000": 0,
      "1704099600000": 0,
      "1704103200000": 1.5570000000000002,
      "1704106800000": 0.538,
      "1704110400000": 0.10999999999999988,
      "1704114000000": 0.615,
      "1704117600000": 0.478,
      "1704121200000": 0.19200000000000023,
      "1704124800000": 0.14000000000000007,
      "1704128400000": 0.426,
      "1704132000000": 0.2250000000000002,
      "1704135600000": 0.396,
      "1704139200000": 1.143,
      "1704142800000": 1.3300000000000003,
      "1704146400000": 0,
      "1704150000000": 0,
    },
    "solar_to_battery": {
      "1704067200000": 0.055,
      "1704070800000": 1.7730000000000006,
      "1704074400000": 0.361,
      "1704078000000": 1.278,
      "1704081600000": 1.081,
      "1704085200000": 0.279,
      "1704088800000": 1.1760000000000002,
      "1704092400000": 0.351,
      "1704096000000": 0,
      "1704099600000": 0.832,
      "1704103200000": 0.1549999999999998,
      "1704106800000": 0.47,
      "1704110400000": 1.231,
      "1704114000000": 0.708,
      "1704117600000": 0,
      "1704121200000": 0.7159999999999997,
      "1704124800000": 1.0999999999999999,
      "1704128400000": 1.128,
      "1704132000000": 0.6049999999999998,
      "1704135600000": 0,
      "1704139200000": 0.5129999999999999,
      "1704142800000": 0.5279999999999998,
      "1704146400000": 1.322,
      "1704150000000": 0.282,
    },
    "solar_to_grid": {
      "1704067200000": 0,
      "1704070800000": 0.11599999999999944,
      "1704074400000": 0.391,
      "1704078000000": 0.6799999999999999,
      "1704081600000": 0.22100000000000009,
      "1704085200000": 0,
      "1704088800000": 0.16799999999999993,
      "1704092400000": 0.189,
      "1704096000000": 0.312,
      "1704099600000": 1.097,
      "1704103200000": 0.2300000000000002,
      "1704106800000": 0,
      "1704110400000": 0,
      "1704114000000": 0.15900000000000003,
      "1704117600000": 0,
      "1704121200000": 1.1380000000000003,
      "1704124800000": 0.5850000000000002,
      "1704128400000": 0,
      "1704132000000": 1.3390000000000002,
      "1704135600000": 0.535,
      "1704139200000": 0.2420000000000001,
      "1704142800000": 1.0390000000000001,
      "1704146400000": 0.32199999999999984,
      "1704150000000": 0.998,
    },
    "total": {
      "battery_to_grid": 12.829999999999997,
      "grid_to_battery": 8.248,
      "solar_to_battery": 15.943999999999999,
      "solar_to_grid": 9.761,
      "used_battery": 11.738999999999999,
      "used_grid": 14.384999999999996,
      "used_solar": 3.5389999999999997,
      "used_total": 26.901000000000007,
    },
    "used_battery": {
      "1704067200000": 0,
      "1704070800000": 0,
      "1704074400000": 1.222,
      "1704078000000": 1.4279999999999995,
      "1704081600000": 0.6440000000000001,
      "1704085200000": 0.896,
      "1704088800000": 0,
      "1704092400000": 0.302,
      "1704096000000": 0.937,
      "1704099600000": 0.5359999999999998,
      "1704103200000": 1.1102230246251565e-16,
      "1704106800000": 0.19600000000000017,
      "1704110400000": 1.768,
      "1704114000000": 0,
      "1704117600000": 0.866,
      "1704121200000": 4.440892098500626e-16,
      "1704124800000": 1.1102230246251565e-16,
      "1704128400000": 0,
      "1704132000000": 1.1102230246251565e-16,
      "1704135600000": 0,
      "1704139200000": 0,
      "1704142800000": 2.220446049250313e-16,
      "1704146400000": 1.8789999999999998,
      "1704150000000": 1.065,
    },
    "used_grid": {
      "1704067200000": 0,
      "1704070800000": 0.26600000000000046,
      "1704074400000": 0.142,
      "1704078000000": 0,
      "1704081600000": 1.9409999999999998,
      "1704085200000": 0.9530000000000002,
      "1704088800000": 0,
      "1704092400000": 0.906,
      "1704096000000": 1.263,
      "1704099600000": 0.813,
      "1704103200000": 0.4189999999999997,
      "1704106800000": 0,
      "1704110400000": 1.5970000000000002,
      "1704114000000": 0.782,
      "1704117600000": 1.4449999999999998,
      "1704121200000": 0.24499999999999933,
      "1704124800000": 0.2709999999999998,
      "1704128400000": 0,
      "1704132000000": 0.5849999999999997,
      "1704135600000": 0.4940000000000003,
      "1704139200000": 0,
      "1704142800000": 0.09699999999999953,
      "1704146400000": 0.545,
      "1704150000000": 1.621,
    },
    "used_solar": {
      "1704067200000": 0,
      "1704070800000": 0,
      "1704074400000": 1.142,
      "1704078000000": 0,
      "1704081600000": 0,
      "1704085200000": 0,
      "1704088800000": 0,
      "1704092400000": 0.569,
      "1704096000000": 1.677,
      "1704099600000": 0,
      "1704103200000": 0,
      "1704106800000": 0,
      "1704110400000": 0,
      "1704114000000": 0,
      "1704117600000": 0,
      "1704121200000": 0,
      "1704124800000": 0,
      "1704128400000": 0,
      "1704132000000": 0,
      "1704135600000": 0,
      "1704139200000": 0,
      "1704142800000": 0,
      "1704146400000": 0,
      "1704150000000": 0.15100000000000002,
    },
    "used_total": {
      "1704067200000": -1.741,
      "1704070800000": 0.26600000000000046,
      "1704074400000": 2.5060000000000002,
      "1704078000000": 1.4279999999999995,
      "1704081600000": 2.585,
      "1704085200000": 1.8490000000000002,
      "1704088800000": -0.47499999999999987,
      "1704092400000": 1.7770000000000001,
      "1704096000000": 3.8770000000000002,
      "1704099600000": 1.3489999999999998,
      "1704103200000": 0.4189999999999998,
      "1704106800000": 0.19600000000000017,
      "1704110400000": 3.365,
      "1704114000000": 0.782,
      "1704117600000": 2.311,
      "1704121200000": 0.24499999999999977,
      "1704124800000": 0.2709999999999999,
      "1704128400000": -0.28900000000000015,
      "1704132000000": 0.5849999999999999,
      "1704135600000": 0.4940000000000003,
      "1704139200000": -0.2569999999999997,
      "1704142800000": 0.09699999999999975,
      "1704146400000": 2.4240000000000004,
      "1704150000000": 2.8369999999999997,
    },
  },
}
`;

exports[`computeConsumptionSingle characterization > handles a full battery flow 1`] = `
{
  "battery_to_grid": 0,
  "grid_to_battery": 0,
  "solar_to_battery": 3,
  "solar_to_grid": 1,
  "used_battery": 2,
  "used_grid": 2,
  "used_solar": 2,
  "used_total": 6,
}
`;

exports[`computeConsumptionSingle characterization > handles battery charged from grid 1`] = `
{
  "battery_to_grid": 0,
  "grid_to_battery": 4,
  "solar_to_battery": 0,
  "solar_to_grid": 0,
  "used_battery": 0,
  "used_grid": 2,
  "used_solar": 0,
  "used_total": 2,
}
`;

exports[`computeConsumptionSingle characterization > handles grid-only consumption 1`] = `
{
  "battery_to_grid": 0,
  "grid_to_battery": 0,
  "solar_to_battery": 0,
  "solar_to_grid": 0,
  "used_battery": 0,
  "used_grid": 5,
  "used_solar": 0,
  "used_total": 5,
}
`;

exports[`computeConsumptionSingle characterization > handles solar excess returned to grid 1`] = `
{
  "battery_to_grid": 0,
  "grid_to_battery": 0,
  "solar_to_battery": 0,
  "solar_to_grid": 4,
  "used_battery": 0,
  "used_grid": 1,
  "used_solar": 4,
  "used_total": 5,
}
`;

exports[`getSummedData characterization > digest is stable for a month of 5-minute data 1`] = `
{
  "keys": [
    "from_battery",
    "from_grid",
    "solar",
    "timestamps",
    "to_battery",
    "to_grid",
    "total",
  ],
  "numberCount": 4394,
  "numberSum": "1.26882102241e+15",
  "type": "object",
}
`;

exports[`getSummedData characterization > matches snapshot for a full setup with compare data 1`] = `
{
  "compareSummedData": {
    "from_battery": {
      "1703980800000": 0.96,
      "1703984400000": 0.144,
      "1703988000000": 1.593,
      "1703991600000": 0.651,
      "1703995200000": 0.556,
      "1703998800000": 1.967,
      "1704002400000": 0.163,
      "1704006000000": 0.49,
      "1704009600000": 1.67,
      "1704013200000": 0.269,
      "1704016800000": 0.872,
      "1704020400000": 1.437,
      "1704027600000": 1.431,
      "1704031200000": 0.814,
      "1704034800000": 1.772,
      "1704038400000": 0.502,
      "1704042000000": 1.185,
      "1704045600000": 0.978,
      "1704049200000": 1.418,
      "1704052800000": 1.869,
      "1704056400000": 1.127,
      "1704060000000": 0.19,
    },
    "from_grid": {
      "1703980800000": 1.118,
      "1703984400000": 1.455,
      "1703988000000": 0.821,
      "1703991600000": 1.078,
      "1703995200000": 1.187,
      "1703998800000": 0.298,
      "1704002400000": 0.243,
      "1704006000000": 1.114,
      "1704009600000": 1.17,
      "1704013200000": 0.724,
      "1704016800000": 1.994,
      "1704020400000": 1.747,
      "1704024000000": 1.981,
      "1704027600000": 1.658,
      "1704031200000": 1.897,
      "1704034800000": 1.166,
      "1704038400000": 1.688,
      "1704042000000": 0.879,
      "1704045600000": 0.687,
      "1704049200000": 1.909,
      "1704052800000": 0.319,
      "1704060000000": 0.662,
      "1704063600000": 0.485,
    },
    "solar": {
      "1703980800000": 0.196,
      "1703984400000": 0.112,
      "1703988000000": 1.825,
      "1703991600000": 1.18,
      "1703995200000": 1.242,
      "1703998800000": 0.566,
      "1704002400000": 1.679,
      "1704006000000": 0.775,
      "1704009600000": 1.579,
      "1704013200000": 0.257,
      "1704016800000": 0.592,
      "1704020400000": 1.311,
      "1704024000000": 0.304,
      "1704027600000": 0.948,
      "1704031200000": 0.182,
      "1704034800000": 0.274,
      "1704038400000": 0.176,
      "1704045600000": 1.953,
      "1704049200000": 1.965,
      "1704052800000": 1.437,
      "1704056400000": 1.101,
      "1704060000000": 0.105,
      "1704063600000": 0.381,
    },
    "timestamps": [
      1703980800000,
      1703984400000,
      1703988000000,
      1703991600000,
      1703995200000,
      1703998800000,
      1704002400000,
      1704006000000,
      1704009600000,
      1704013200000,
      1704016800000,
      1704020400000,
      1704024000000,
      1704027600000,
      1704031200000,
      1704034800000,
      1704038400000,
      1704042000000,
      1704045600000,
      1704049200000,
      1704052800000,
      1704056400000,
      1704060000000,
      1704063600000,
    ],
    "to_battery": {
      "1703980800000": 1.528,
      "1703984400000": 0.362,
      "1703988000000": 1.435,
      "1703991600000": 1.574,
      "1703995200000": 1.558,
      "1703998800000": 0.406,
      "1704002400000": 0.073,
      "1704006000000": 0.804,
      "1704009600000": 0.827,
      "1704013200000": 0.882,
      "1704016800000": 1.714,
      "1704020400000": 0.289,
      "1704024000000": 0.864,
      "1704027600000": 0.287,
      "1704031200000": 0.346,
      "1704034800000": 1.226,
      "1704042000000": 0.36,
      "1704045600000": 0.828,
      "1704049200000": 0.544,
      "1704052800000": 1.155,
      "1704056400000": 0.082,
      "1704060000000": 1.664,
      "1704063600000": 0.222,
    },
    "to_grid": {
      "1703980800000": 1.451,
      "1703984400000": 1.973,
      "1703988000000": 0.52,
      "1703991600000": 1.393,
      "1703995200000": 1.749,
      "1703998800000": 1.228,
      "1704002400000": 1.06,
      "1704006000000": 1.478,
      "1704009600000": 0.995,
      "1704013200000": 1.513,
      "1704016800000": 1.06,
      "1704020400000": 1.695,
      "1704024000000": 1.453,
      "1704027600000": 1.704,
      "1704031200000": 0.209,
      "1704034800000": 0.131,
      "1704038400000": 1.029,
      "1704042000000": 1.15,
      "1704045600000": 1.014,
      "1704049200000": 0.248,
      "1704052800000": 0.014,
      "1704056400000": 1.727,
      "1704060000000": 0.517,
      "1704063600000": 0.728,
    },
    "total": {
      "from_battery": 22.058,
      "from_grid": 26.279999999999998,
      "solar": 20.140000000000004,
      "to_battery": 19.030000000000005,
      "to_grid": 26.038999999999998,
    },
  },
  "summedData": {
    "from_battery": {
      "1704067200000": 1.922,
      "1704070800000": 0.238,
      "1704074400000": 1.443,
      "1704078000000": 1.852,
      "1704081600000": 1.996,
      "1704085200000": 0.143,
      "1704088800000": 1.047,
      "1704092400000": 0.473,
      "1704096000000": 1.313,
      "1704099600000": 0.982,
      "1704103200000": 1.109,
      "1704106800000": 1.726,
      "1704110400000": 0.707,
      "1704114000000": 1.468,
      "1704117600000": 0.299,
      "1704121200000": 0.051,
      "1704124800000": 1.133,
      "1704128400000": 0.452,
      "1704132000000": 1.135,
      "1704135600000": 1.865,
      "1704139200000": 1.031,
      "1704142800000": 1.608,
      "1704146400000": 0.776,
      "1704150000000": 0.653,
    },
    "from_grid": {
      "1704067200000": 0.912,
      "1704070800000": 1.526,
      "1704074400000": 0.973,
      "1704078000000": 0.527,
      "1704081600000": 0.39,
      "1704085200000": 1.428,
      "1704088800000": 1.587,
      "1704092400000": 0.647,
      "1704096000000": 0.573,
      "1704099600000": 1.053,
      "1704103200000": 1.08,
      "1704110400000": 0.621,
      "1704114000000": 1.539,
      "1704117600000": 1.429,
      "1704121200000": 0.736,
      "1704124800000": 0.003,
      "1704132000000": 1.726,
      "1704135600000": 1.364,
      "1704139200000": 1.169,
      "1704142800000": 0.142,
      "1704146400000": 1.062,
      "1704150000000": 0.826,
    },
    "solar": {
      "1704067200000": 0.106,
      "1704070800000": 0.059,
      "1704074400000": 1.369,
      "1704078000000": 0.665,
      "1704081600000": 0.29,
      "1704085200000": 0.008,
      "1704088800000": 0.631,
      "1704092400000": 1.91,
      "1704096000000": 0.102,
      "1704099600000": 0.861,
      "1704103200000": 1.363,
      "1704106800000": 1.208,
      "1704110400000": 0.861,
      "1704114000000": 1.403,
      "1704117600000": 1.264,
      "1704121200000": 1.934,
      "1704124800000": 0.348,
      "1704128400000": 1.86,
      "1704132000000": 0.983,
      "1704135600000": 1.784,
      "1704139200000": 0.863,
      "1704142800000": 0.187,
      "1704146400000": 0.145,
      "1704150000000": 1.677,
    },
    "timestamps": [
      1704067200000,
      1704070800000,
      1704074400000,
      1704078000000,
      1704081600000,
      1704085200000,
      1704088800000,
      1704092400000,
      1704096000000,
      1704099600000,
      1704103200000,
      1704106800000,
      1704110400000,
      1704114000000,
      1704117600000,
      1704121200000,
      1704124800000,
      1704128400000,
      1704132000000,
      1704135600000,
      1704139200000,
      1704142800000,
      1704146400000,
      1704150000000,
    ],
    "to_battery": {
      "1704067200000": 0.337,
      "1704070800000": 1.819,
      "1704074400000": 1.131,
      "1704078000000": 1.331,
      "1704081600000": 1.784,
      "1704085200000": 0.964,
      "1704088800000": 1.247,
      "1704092400000": 1.751,
      "1704096000000": 1.635,
      "1704099600000": 0.409,
      "1704103200000": 1.993,
      "1704106800000": 0.64,
      "1704110400000": 0.423,
      "1704114000000": 1.512,
      "1704117600000": 1.335,
      "1704121200000": 1.534,
      "1704124800000": 1.741,
      "1704128400000": 1.078,
      "1704132000000": 1.099,
      "1704135600000": 1.287,
      "1704139200000": 0.584,
      "1704142800000": 1.127,
      "1704146400000": 1.084,
      "1704150000000": 1.519,
    },
    "to_grid": {
      "1704067200000": 1.838,
      "1704070800000": 1.081,
      "1704074400000": 0.85,
      "1704078000000": 1.967,
      "1704081600000": 0.641,
      "1704085200000": 0.764,
      "1704088800000": 1.945,
      "1704092400000": 0.333,
      "1704096000000": 0.333,
      "1704099600000": 0.633,
      "1704103200000": 1.121,
      "1704106800000": 1.965,
      "1704110400000": 1.087,
      "1704114000000": 1.739,
      "1704117600000": 0.032,
      "1704121200000": 1.305,
      "1704124800000": 1.762,
      "1704128400000": 1.15,
      "1704132000000": 0.125,
      "1704135600000": 0.075,
      "1704139200000": 1.046,
      "1704142800000": 1.534,
      "1704146400000": 0.063,
      "1704150000000": 1.29,
    },
    "total": {
      "from_battery": 25.421999999999997,
      "from_grid": 21.313000000000002,
      "solar": 21.881,
      "to_battery": 29.363999999999994,
      "to_grid": 24.678999999999995,
    },
  },
}
`;

exports[`getSummedData characterization > matches snapshot for a grid-only setup 1`] = `
{
  "compareSummedData": {
    "from_grid": {},
    "timestamps": [],
    "to_grid": {},
    "total": {
      "from_grid": 0,
      "to_grid": 0,
    },
  },
  "summedData": {
    "from_grid": {
      "1704070800000": 1.962,
      "1704074400000": 0.562,
      "1704078000000": 1.441,
      "1704081600000": 1.99,
      "1704085200000": 0.978,
      "1704088800000": 0.807,
      "1704092400000": 0.309,
      "1704096000000": 0.135,
      "1704099600000": 1.534,
      "1704103200000": 0.382,
      "1704106800000": 0.855,
      "1704110400000": 1.597,
      "1704114000000": 0.411,
      "1704117600000": 1.092,
      "1704121200000": 0.386,
      "1704124800000": 0.908,
      "1704128400000": 1.989,
      "1704132000000": 1.514,
      "1704135600000": 0.647,
      "1704139200000": 0.498,
      "1704142800000": 1.452,
      "1704146400000": 0.254,
      "1704150000000": 0.097,
    },
    "timestamps": [
      1704067200000,
      1704070800000,
      1704074400000,
      1704078000000,
      1704081600000,
      1704085200000,
      1704088800000,
      1704092400000,
      1704096000000,
      1704099600000,
      1704103200000,
      1704106800000,
      1704110400000,
      1704114000000,
      1704117600000,
      1704121200000,
      1704124800000,
      1704128400000,
      1704132000000,
      1704135600000,
      1704139200000,
      1704142800000,
      1704146400000,
      1704150000000,
    ],
    "to_grid": {
      "1704067200000": 0.222,
      "1704070800000": 1.314,
      "1704074400000": 1.197,
      "1704078000000": 1.355,
      "1704081600000": 0.312,
      "1704085200000": 1.266,
      "1704088800000": 1.694,
      "1704092400000": 1.124,
      "1704096000000": 1.564,
      "1704099600000": 1.056,
      "1704103200000": 0.556,
      "1704106800000": 1.025,
      "1704110400000": 0.945,
      "1704114000000": 1.006,
      "1704117600000": 1.01,
      "1704121200000": 1.647,
      "1704124800000": 1.517,
      "1704128400000": 1.01,
      "1704132000000": 0.145,
      "1704135600000": 0.615,
      "1704139200000": 0.022,
      "1704142800000": 0.733,
      "1704146400000": 1.9,
      "1704150000000": 1.918,
    },
    "total": {
      "from_grid": 21.8,
      "to_grid": 25.152999999999995,
    },
  },
}
`;

exports[`getSummedData characterization > matches snapshot for grid + solar 1`] = `
{
  "compareSummedData": {
    "from_grid": {},
    "solar": {},
    "timestamps": [],
    "to_grid": {},
    "total": {
      "from_grid": 0,
      "solar": 0,
      "to_grid": 0,
    },
  },
  "summedData": {
    "from_grid": {
      "1704067200000": 0.571,
      "1704070800000": 1.751,
      "1704074400000": 0.998,
      "1704078000000": 1.563,
      "1704081600000": 1.572,
      "1704085200000": 0.848,
      "1704088800000": 1.163,
      "1704092400000": 1.344,
      "1704096000000": 1.943,
      "1704099600000": 1.83,
      "1704103200000": 0.256,
      "1704106800000": 0.014,
      "1704110400000": 0.904,
      "1704114000000": 1.977,
      "1704117600000": 0.936,
      "1704121200000": 0.105,
      "1704124800000": 0.191,
      "1704128400000": 1.921,
      "1704132000000": 0.001,
      "1704135600000": 0.145,
      "1704139200000": 1.055,
      "1704142800000": 1.356,
      "1704146400000": 1.556,
      "1704150000000": 1.654,
    },
    "solar": {
      "1704067200000": 1.696,
      "1704070800000": 1.811,
      "1704074400000": 0.1,
      "1704078000000": 1.399,
      "1704081600000": 1.931,
      "1704085200000": 1.021,
      "1704088800000": 0.273,
      "1704092400000": 1.452,
      "1704096000000": 1.535,
      "1704099600000": 1.714,
      "1704103200000": 0.603,
      "1704106800000": 0.893,
      "1704110400000": 0.101,
      "1704114000000": 1.528,
      "1704117600000": 0.216,
      "1704121200000": 0.581,
      "1704124800000": 1.287,
      "1704128400000": 1.67,
      "1704132000000": 0.825,
      "1704135600000": 0.626,
      "1704139200000": 0.823,
      "1704142800000": 0.136,
      "1704146400000": 0.409,
      "1704150000000": 0.046,
    },
    "timestamps": [
      1704067200000,
      1704070800000,
      1704074400000,
      1704078000000,
      1704081600000,
      1704085200000,
      1704088800000,
      1704092400000,
      1704096000000,
      1704099600000,
      1704103200000,
      1704106800000,
      1704110400000,
      1704114000000,
      1704117600000,
      1704121200000,
      1704124800000,
      1704128400000,
      1704132000000,
      1704135600000,
      1704139200000,
      1704142800000,
      1704146400000,
      1704150000000,
    ],
    "to_grid": {
      "1704067200000": 0.832,
      "1704070800000": 0.997,
      "1704074400000": 0.692,
      "1704078000000": 1.76,
      "1704081600000": 1.665,
      "1704085200000": 0.016,
      "1704088800000": 0.632,
      "1704092400000": 0.405,
      "1704096000000": 0.782,
      "1704099600000": 0.709,
      "1704103200000": 1.403,
      "1704106800000": 0.944,
      "1704110400000": 0.337,
      "1704114000000": 0.999,
      "1704117600000": 1.774,
      "1704121200000": 0.737,
      "1704124800000": 0.906,
      "1704128400000": 0.591,
      "1704132000000": 1.459,
      "1704135600000": 0.871,
      "1704139200000": 0.126,
      "1704142800000": 1.731,
      "1704146400000": 0.911,
      "1704150000000": 1.183,
    },
    "total": {
      "from_grid": 25.654,
      "solar": 22.676,
      "to_grid": 22.462000000000003,
    },
  },
}
`;
